# mcstats_cameo_server.git-

./: .astylerc  .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  NeutronData_simple.json  README.md  build.sh  build_and_package.sh  cameo.man  cameo_config.xml  environment.properties  mongo-cxx.sh  request.json  test.sh  todo.org  weight_problem.sh
.githooks/: pre-commit
client_api/: API.md  CMakeLists.txt
client_api/cmake/: cameo_mcstas_client-config.cmake.in
client_api/include/: cameo_mcstas_client.hh  instruments.hh  samples.hh  sim_request.hh  sim_request_answer.hh  sim_result.hh  stages.hh
client_api/packaging/: CPackConfig.cmake
client_api/src/: sim_request.cc  sim_request_answer.cc  sim_result.cc
client_api/test/: client.cpp  test1.sh
doc/: API.md  DEVEL.md  Doxyfile.in  DoxygenLayout.xml
include/: hash.h  local_cache.hh  mongo_cache.hh  sim_request.hh  sim_request_answer_server.hh  sim_request_server.hh  sim_result_detector.hh  sim_result_server.hh  stages.hh
mcstas/: CMakeLists.txt  ILL_D22_preV-source_simple.instr  ILL_D22_quick.instr  ILL_D22_quick_merge.instr  ILL_H51.instr  ILL_H512.instr  ILL_H512_D22-preVselector.instr  ILL_H512_D22-sSAMPLE.instr  ILL_H512_D22-source_simple.instr  ILL_H512_D22.instr  ILL_source.instr  ILL_source_simple.instr  ILL_source_simple_test.instr  ILL_source_test.instr  MCPL_input.comp  MCPL_output.comp  mcstas_py_to_instr.py
packaging/: CPackConfig.cmake
python/: import_mongo.py  plot_mcpl.py
share/: cameo_config.xml
src/: fakeNomad.cpp  mcstas_server.cpp  sim_request.cc  sim_request_answer_server.cc  sim_request_server.cc  sim_result_server.cc
test/: D22_Detector_0000000000.x_y  cameo_config.xml.in  test1.sh  testserver.cpp
tools/: plot.awk  plot.gpl  plot.sh
